# opentelemetry-demo

./: .env  .gitignore  Makefile  README.md  clean_k8s_manifest.rb  docker-compose.yml  install.sh
.github/workflows/: build-and-push-images.yml
kubernetes/: opentelemetry-demo.yaml
src/accounting/: Accounting.csproj  Consumer.cs  Dockerfile
src/ad/: build.gradle
src/ad/src/main/java/oteldemo/: AdService.java
src/cart/src/: Program.cs  cart.csproj
src/cart/src/cartstore/: ValkeyCartStore.cs
src/cart/src/services/: CartService.cs
src/checkout/: go.mod  main.go
src/currency/src/: server.cpp
src/email/: Gemfile  email_server.rb
src/flagd-ui/: package.json
src/fraud-detection/: Dockerfile
src/fraud-detection/src/main/kotlin/frauddetection/: main.kt
src/frontend/: Dockerfile  package.json
src/frontend-proxy/: envoy.tmpl.yaml
src/frontend/gateways/: Api.gateway.ts
src/frontend/pages/: _app.tsx
src/image-provider/: Dockerfile
src/kafka/: Dockerfile
src/load-generator/: locustfile.py  requirements.txt
src/payment/: charge.js  index.js  logger.js  package.json
src/product-catalog/: Dockerfile  go.mod  main.go
src/quote/: Dockerfile  composer.json
src/quote/app/: routes.php
src/quote/public/: index.php
src/recommendation/: Dockerfile  recommendation_server.py  requirements.txt
src/shipping/: Cargo.toml
src/shipping/src/: main.rs
src/shipping/src/shipping_service/: quote.rs
