[package]
name = "shipping"
edition = "2021"

[[bin]]
name = "shipping"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.99"
awc = { version = "3.7.0", default-features = false, features = ["compress-zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
tonic = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }


[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
